Fix background so it covers entire viewport at all times

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 
 html {
   height: 100vh;
-  background: linear-gradient(45deg, rgb(131, 0, 0), rgb(0, 0, 126));
+  background: linear-gradient(45deg, rgb(131, 0, 0), rgb(0, 0, 126)) fixed;
   background-repeat: no-repeat;
 }
 
